# SQL-workshop

./: .gitignore  README.md  dockerfile  pyproject.toml
database/: README.md  database.py
